src/test/run-pass/issue-2284.rs
// xfail-test
trait Send {
    fn f();
}

fn f<T: Send>(t: T) {
    t.f();
}

fn main() {
}