src/test/compile-fail/ext-noname.rs
// xfail-test
// error-pattern:expected a syntax expander name

fn main() {
  #();
}
